correct some issue and refactoring code
